#2 06:09 09.06.2020 add adaptive version

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             </div>
 
             <div class="footer-content">
-                <div class="footer-title">Соц. сети</div>
+                <div class="footer-title social">Соц. сети</div>
                 <div class="footer-socials">
                     <div class="icon icon-vk">
                         <img src="./style/img/vk-white.svg" alt="">
