#3 16:37 11.06.2020 change /header-nav /main /founder for adaptive

--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./style/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
 <!--Header-->
     <section class="section-outer section-header">
         <div class="section-inner">
+            <div class="section-header-burger">
+                <div class="header-burger-icon">
+                    <i class="fa fa-bars"></i>
+                </div>
+            </div>
+
             <div class="section-header-nav">
                 <div class="nav-item">КОМПЬЮТЕР</div>
                 <div class="nav-item">ТЕЛЕВИДЕНЬЕ</div>
@@ -86,7 +93,7 @@
 <section class="section-outer section-promo">
     <div class="section-inner">
         <div class="section-promo-video">
-            <div class="button">
+            <div class="video-button">
                 <img src="./style/img/button-watch.svg" alt="">
             </div>
         </div>
@@ -99,6 +106,7 @@
     <div class="section-inner">
         <div class="section-founder-container">
             <div class="founder-item">
+
                 <div class="founder-title active">15 лет</div>
 
                 <div class="founder-subtitle">Работаем для
